--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,9 @@ lazy_static = "1.4"
 r2d2 = "0.8"
 jsonwebtoken = "8"
 dotenv = "0.15.0"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["blocking", "json"]}
 serde_json = "1.0.92"
 enclose = "1.1.8"
 actix-easy-multipart = "3.0.0"
 md5 = "0.7.0"
+paperclip = { version = "0.8", features = ["actix4","uuid"] }
