diesel async used

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "actix_web-diesel-swagger-boilerplate"
+name = "booking-system"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [".", "xynes"]
 
 [dependencies]
 actix-web = "^4"
@@ -14,10 +16,11 @@ log = "^0.4"
 derive_more = "^0.99"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
-diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
+diesel = { version = "2.0.3", features = ["r2d2", "uuid", "chrono"] }
+diesel-async = { version = "0.2.2", features = ["postgres","deadpool"] }
 diesel_migrations = "2.0.0"
 lazy_static = "1.4"
-r2d2 = "0.8"
+# r2d2 = "0.8"
 jsonwebtoken = "8"
 dotenv = "0.15.0"
 reqwest = { version = "0.11", features = ["blocking", "json"]}
@@ -25,4 +28,6 @@ serde_json = "1.0.92"
 enclose = "1.1.8"
 actix-easy-multipart = "3.0.0"
 md5 = "0.7.0"
-paperclip = { version = "0.8", features = ["actix4","uuid"] }
+paperclip = { version = "0.8", features = ["actix4","uuid","chrono"] }
+actix-cors = "0.6.4"
+http = "0.2.9"
