--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,5 @@ paperclip = { version = "0.8", features = ["actix4","uuid","chrono","v3"] }
 actix-cors = "0.6.5"
 http = "1.0.0"
 regex = "1.8.1"
+actix-governor = "0.5.0"
 
